--- a/lib/css/skeleton.css
+++ b/lib/css/skeleton.css
@@ -31,6 +31,7 @@
 .container {
   position: relative;
   width: 100%;
+  /*max-width: 1280px;*/
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
