--- a/location_history/css/style.css
+++ b/location_history/css/style.css
@@ -50,7 +50,7 @@ body {
 
 .resource-window {
 	position: absolute;
-	bottom: 5%;
+	bottom: 3%;
 	left: 2%;
 	z-index: 99;
 
@@ -63,6 +63,13 @@ body {
 	border: 1px solid gray;
 	border-radius: 3px;
 	padding: 5px 15px 5px;
+
+	opacity: 0.9;
+}
+
+.resource-window[value="trips"] {
+	max-height: 35%;
+	opacity: 0.75;
 }
 
 .resource-window li {
@@ -126,6 +133,7 @@ body {
 
 .info-window {
 	min-width: 500px;
+	opacity: 0.9;
 }
 
 .info-window #header {
