--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ a#first-anchor {
 }
 
 .navbar {
+	font-size: 1.2em;
 	padding-top: 5px;
 	padding-bottom: 5px;
 	background: white;
@@ -126,6 +127,10 @@ footer {
 	text-align: center;
 	padding-bottom: 25px;
 	font-size: 1.1em;
+}
+
+main li.post-item {
+	margin-bottom: .4em;
 }
 
 main li.post-item a {
