--- a/posts/css/style.css
+++ b/posts/css/style.css
@@ -1,7 +1,14 @@
 h2 {
   font-weight: bold;
-  margin-bottom: 1em;
+  margin-bottom: .75em;
   font-size: 2.25em;
+}
+
+h3 {
+  font-size: 1.5em;
+  margin: 1em 0 .5em;
+  border-bottom: 3px solid #888;
+  padding-bottom: .1em;
 }
 
 article {
