--- a/posts/css/style.css
+++ b/posts/css/style.css
@@ -1,7 +1,3 @@
-section {
-  font-size: .95em;
-}
-
 h2 {
   font-weight: bold;
   margin-bottom: .75em;
@@ -16,7 +12,8 @@ h3 {
 }
 
 article {
-  padding: 0 40px 0;
+  padding: 0 35px 0;
+  font-size: 1.4em;
 }
 
 p {
