added footer with written and updated dates to posts

--- a/__partials/css/style.css
+++ b/__partials/css/style.css
@@ -73,3 +73,9 @@ ul.formula li {
 	margin-top: .5em;
 	list-style: none;
 }
+
+footer {
+	text-align: center;
+	margin-top: 3em;
+	font-size: .8em;
+}
