finished post on automating development, added img subdirectory to posts directory, changed htaccess to permit access to this directory

--- a/html/posts/css/style.css
+++ b/html/posts/css/style.css
@@ -28,3 +28,13 @@ li {
 div.paragraph {
   margin-bottom: 1.25em;
 }
+
+div.image {
+  text-align: center;
+  padding: 0em 0em 1em;
+}
+
+img {
+  display: inline-block;
+  max-width: 450px;
+}
