Added nginx in front of apache. Apache listens on a different port, which blocked by an AWS security group, and nginx reroutes petitions to apache. Nginx is now primary server on site.

--- a/deploy/roles/common/templates/dronfelipe-apache.conf.j2
+++ b/deploy/roles/common/templates/dronfelipe-apache.conf.j2
@@ -1,5 +1,4 @@
-<VirtualHost *:80>
-  ServerName {{ server_name }}
+<VirtualHost *:{{ dronfelipe_port }}>
   DocumentRoot {{ document_root }}
 
   <Directory {{ document_root }}>
